--- a/OutworldzFiles/Help/Diva.htm
+++ b/OutworldzFiles/Help/Diva.htm
@@ -238,7 +238,7 @@ src="Diva_files/image002.png"></p>
 
 <div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h1 style='background:#5B9BD5'>Wifi Admin</h1>
+<h1>Wifi Admin</h1>
 
 </div>
 
@@ -339,13 +339,16 @@ style='color:windowtext;text-decoration:none'>https://support.google.com/account
 
 <div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h1 style='background:#5B9BD5'><a name="_Toc58323658">Theme</a></h1>
+<h1><a name="_Toc58323658">Theme</a></h1>
 
 </div>
 
 <p class=MsoNormal>There are three theme colors, Black on White, White on
-Black, and Custom.  The default theme is Black, or the selected theme will  be
-set by Dreamgrid into the real WifiPages folder on startup. </p>
+Black, and Custom.  The default theme is Black, or the selected theme will be
+set by DreamGrid into the real WifiPages folder on startup. </p>
+
+<p class=MsoNormal>Custom starts out as the White theme. You can modify this
+theme according to instructions down below.</p>
 
 <p class=MsoNormal>Click the photo to change it for the theme.</p>
 
@@ -356,8 +359,7 @@ src="Diva_files/image007.png"></p>
 
 <div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h1 style='background:#5B9BD5'><a name="_Toc58323659">Viewer Splash Screen URL:</a>
-</h1>
+<h1><a name="_Toc58323659">Viewer Splash Screen URL:</a> </h1>
 
 </div>
 
@@ -378,7 +380,7 @@ the Login Page.    It can be any web page.</p>
 
 <div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h1 style='background:#5B9BD5'>Greeting</h1>
+<h1>Greeting</h1>
 
 </div>
 
@@ -389,7 +391,7 @@ src="Diva_files/image009.png"></p>
 
 <div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h1 style='background:#5B9BD5'><a name="_Toc58323660">Friendly Name</a></h1>
+<h1><a name="_Toc58323660">Friendly Name</a></h1>
 
 </div>
 
@@ -402,7 +404,7 @@ src="Diva_files/image010.png"></p>
 
 <div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h1 style='background:#5B9BD5'><a name="_Toc58323661">Default Avatars:</a></h1>
+<h1><a name="_Toc58323661">Default Avatars:</a></h1>
 
 </div>
 
@@ -427,8 +429,8 @@ basic body parts, new pants, and new shirt. These parts come directly from the
 Opensim Library and&nbsp;MUST NOT&nbsp;be worn in your final appearance for the
 default avatars. You can COPY these library parts into the avatar’s inventory
 if you wish, or create new body parts and clothing, but before you finish you
-should remove any items that show as “worn” in the Opensim Library as those will
-not rez on avatars based on these models.<br>
+should remove any items that show as “worn” in the Opensim Library as those
+will not rez on avatars based on these models.<br>
 <br>
 </p>
 
@@ -462,7 +464,7 @@ under Clothes -&gt; Default Avatar &lt;AvatarType&gt;.</p>
 
 <div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h1 style='background:#5B9BD5'><a name="_Toc58323662">Customizing your theme</a></h1>
+<h1><a name="_Toc58323662">Customizing your theme</a></h1>
 
 </div>
 
@@ -490,13 +492,13 @@ style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nb
 style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>Outworldzfiles\Opensim\bin\WifiPages-Black</p>
 
-<p class=MsoNormal>If you want to make modifications, please use a custom
-theme. Otherwise, your changes to the -Black, -White or WifiPages folders will be
-over-written in an update.</p>
+<p class=MsoNormal>If you want to make modifications, please use a custom theme.
+Otherwise, your changes to the -Black, -White or WifiPages folders will be over-written
+in an update.</p>
 
 <p class=MsoNormal>First copy both the two Black, or the two White folders to
-the WifiPages-Custom folder next to them. Each set of files goes in these places: 
-</p>
+the WifiPages-Custom folder next to them. Each set of files goes in these
+places:  </p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-.25in'><span
 style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -517,7 +519,7 @@ src="Diva_files/image007.png"></p>
 
 <div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h1 style='background:#5B9BD5'><a name="_Toc58323664">Changing the HTML</a></h1>
+<h1><a name="_Toc58323664">Changing the HTML</a></h1>
 
 </div>
 
@@ -529,10 +531,10 @@ Diva pages.</p>
 <p class=MsoNormal>The site starts from Opensim\bin\WifiPages\index.html.  </p>
 
 <p class=MsoNormal><b>#includes </b>There are several include directives that
-bring in the rest of the web site.   Diva uses a series of &lt;!--#include
-file=header.html --&gt; statements to bring in files from the other folder set
-in Opensim\WifiPages.  Includes in those files then bring in increasingly of
-the web pages from Opensim\Bin\Wifipages. </p>
+bring in the rest of the web site.   Diva uses a series of &lt;!--#include file=header.html
+--&gt; statements to bring in files from the other folder set in
+Opensim\WifiPages.  Includes in those files then bring in increasingly of the
+web pages from Opensim\Bin\Wifipages. </p>
 
 <p class=MsoNormal><b>#get </b>There are several statements that are replaced
 by server data:</p>
