--- a/OutworldzFiles/Help/GridType.htm
+++ b/OutworldzFiles/Help/GridType.htm
@@ -51,9 +51,13 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#4472C4;
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
+a:link, span.MsoHyperlink
+	{color:#0563C1;
+	text-decoration:underline;}
 span.Heading2Char
 	{mso-style-name:"Heading 2 Char";
 	mso-style-link:"Heading 2";
+	font-family:"Times New Roman",serif;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	background:#D9E2F3;}
@@ -84,7 +88,8 @@ div.WordSection1
 
 </head>
 
-<body lang=EN-US style='word-wrap:break-word;text-justify-trim:punctuation'>
+<body lang=EN-US link="#0563C1" vlink="#954F72" style='word-wrap:break-word;
+text-justify-trim:punctuation'>
 
 <div class=WordSection1>
 
@@ -102,31 +107,28 @@ src="GridType_files/image001.png" alt=Image></span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span style='color:black'>Grid Server with
-Robust </span></h2>
+<h2><span style='color:black'>Grid Server with Robust </span></h2>
 
 </div>
 
 <p class=MsoNormal style='margin-left:.5in'><b><span style='color:black'>Grid
 Server with Robust</span></b><span style='color:black'> is a complete
-DreamGrid, with your own inventory, logins, and name.   This is the default.   
-When you start your grid, a Robust Box will open to control all your users’
+DreamGrid, with your own inventory, logins, and name. This is the default. When
+you start your grid, a Robust Box will open to control all your users’
 inventory.</span></p>
 
-<p class=MsoNormal style='margin-left:.5in'><span style='color:black'>This is
-the default with the Robust “Grid&quot; module.   One server must have a
-running copy of Robust. Additional PC's can connect to the Robust server to add
-more regions.</span></p>
+<p class=MsoNormal style='margin-left:.5in'><span style='color:black'>One
+server must have a running copy of Robust. More  PC's can connect to the Robust
+server to add more regions.</span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><span style='color:black'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
-11.0pt;line-height:115%'><img width=495 height=484 id="Picture 2"
+11.0pt;line-height:115%'><img width=494 height=484 id="Picture 2"
 src="GridType_files/image002.png" alt=Image></span></p>
 
-<p class=MsoNormal style='margin-left:.5in'><a
-href="http://opensimulator.org/wiki/Configuration"><span style='color:windowtext;
-text-decoration:none'>http://opensimulator.org/wiki/Configuration</span></a></p>
+<p class=MsoNormal style='margin-left:.5in'>             <a
+href="http://opensimulator.org/wiki/Configuration">http://opensimulator.org/wiki/Configuration</a></p>
 
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
@@ -161,8 +163,8 @@ style='color:blue'>www.outworldz.com</span></a>, and change the HTTP port to
 <p class=MsoNormal style='margin-left:.5in'><span style='color:black'><img
 border=0 width=576 height=199 id="Picture 3" src="GridType_files/image003.jpg"></span></p>
 
-<p class=MsoNormal style='margin-left:.5in'><span style='color:black'>pic
-courtesy of Michael Bradley</span></p>
+<p class=MsoNormal style='margin-left:2.0in;text-indent:.5in'><span
+style='color:black'>pic courtesy of Michael Bradley</span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><span style='color:black'>The
 firewall must also be opened between the two machines. This is not normally an
@@ -173,7 +175,7 @@ only the Region Servers to access your servers port 8003.<br>
 </span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
-11.0pt;line-height:115%'><img border=0 width=495 height=556 id="Picture 4"
+11.0pt;line-height:115%'><img border=0 width=494 height=556 id="Picture 4"
 src="GridType_files/image004.png" alt=Image></span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><a
@@ -200,7 +202,7 @@ need to choose an empty spot on OsGrid's map for each region.  </span></p>
 viewer login must be set to hg.osgrid.org.</span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
-11.0pt;line-height:115%'><img border=0 width=495 height=556 id="Picture 5"
+11.0pt;line-height:115%'><img border=0 width=494 height=556 id="Picture 5"
 src="GridType_files/image004.png" alt=Image></span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><a
@@ -211,7 +213,7 @@ CC-BY-SA 2.5</p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span style='color:black'>Hypergrid.org Server</span></h2>
+<h2><span style='color:black'>Hypergrid.org Server</span></h2>
 
 </div>
 
@@ -225,7 +227,7 @@ connect to Metro in the section below.</span></p>
 <p class=MsoNormal style='margin-left:.5in'><span style='color:black'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
-11.0pt;line-height:115%'><img border=0 width=495 height=556 id="Picture 6"
+11.0pt;line-height:115%'><img border=0 width=494 height=556 id="Picture 6"
 src="GridType_files/image004.png" alt=Image></span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><a
@@ -236,7 +238,7 @@ CC-BY-SA 2.5</p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span style='color:black'>Metropolis Server</span></h2>
+<h2><span style='color:black'>Metropolis Server</span></h2>
 
 </div>
 
@@ -270,7 +272,7 @@ Since copyright-relevant objects can also be loaded into the grid for the
 aforementioned functions, we are obliged to verify the respective user for
 legal reasons.<br>
 <br>
-How can I verify?<br>
+<b>How can I verify?</b><br>
 <br>
 To verify an avatar, a one-off symbolic Euro (1 Euro) will be paid to the
 Metropolis grid via PayPal. Upon payment, PayPal transmits an ID number of the
@@ -286,8 +288,7 @@ For the verification a PayPal account is required, which can be created for
 free on paypal.de . The account is available within a few minutes.&quot;</span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><a
-href="https://hypergrid.org/metropolis/wiki/en/index.php?title=SIM"><span
-style='color:windowtext;text-decoration:none'>https://hypergrid.org/metropolis/wiki/en/index.php?title=SIM</span></a></p>
+href="https://hypergrid.org/metropolis/wiki/en/index.php?title=SIM">https://hypergrid.org/metropolis/wiki/en/index.php?title=SIM</a></p>
 
 </div>
 
