--- a/OutworldzFiles/Help/Icecast.htm
+++ b/OutworldzFiles/Help/Icecast.htm
@@ -43,6 +43,22 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
+h1
+	{mso-style-link:"Heading 1 Char";
+	margin-top:5.0pt;
+	margin-right:0in;
+	margin-bottom:0in;
+	margin-left:0in;
+	line-height:115%;
+	background:#5B9BD5;
+	border:none;
+	padding:0in;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;
+	color:white;
+	text-transform:uppercase;
+	letter-spacing:.75pt;
+	font-weight:normal;}
 h2
 	{mso-style-link:"Heading 2 Char";
 	margin-top:5.0pt;
@@ -77,6 +93,13 @@ p
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Arial Unicode MS",sans-serif;}
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	color:white;
+	text-transform:uppercase;
+	letter-spacing:.75pt;
+	background:#5B9BD5;}
 span.Heading2Char
 	{mso-style-name:"Heading 2 Char";
 	mso-style-link:"Heading 2";
@@ -179,15 +202,9 @@ style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 Web Page</span></b><span style='font-family:"Verdana",sans-serif;color:black'>: 
 Click this button when Icecast is running to get to the control panel web page.</span></p>
 
-<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif;
-color:black;text-transform:uppercase;letter-spacing:.75pt'><br clear=all
-style='page-break-before:always'>
-</span>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
-margin-left:.5in;margin-right:0in'>
-
-<h2 style='background:#DEEAF6'><span style='color:black'>Troubleshooting:</span></h2>
+<h1 style='background:#5B9BD5'>Troubleshooting:</h1>
 
 </div>
 
@@ -228,13 +245,11 @@ exclusion for both ports to your firewall.&nbsp; Keep trying this until you get
 it to answer to http://127.0.0.1:8100. At that point Winamp should
 connect.&nbsp; </span></p>
 
-<b><u><span style='font-size:10.0pt;line-height:115%;font-family:"Verdana",sans-serif;
-color:black'><br clear=all style='page-break-before:always'>
-</span></u></b>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
-.5in'><b><u><span style='font-family:"Verdana",sans-serif;color:black'>How to
-Broadcast Music:</span></u></b></p>
+<h1 style='background:#5B9BD5'>How to Broadcast Music:</h1>
+
+</div>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in'><span style='font-family:"Verdana",sans-serif;color:black'>To streaming
@@ -248,7 +263,7 @@ follow.</span></p>
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>WINAMP</span></h2>
+<h2><span style='color:black'>WINAMP</span></h2>
 
 </div>
 
@@ -347,9 +362,9 @@ the UPNP setting and restart your server.</span></p>
 color:black'>You can configure more of the screens, but they are not required.</span></p>
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:.5in;
-background:white'><span style='font-family:"Verdana",sans-serif;color:black'>Click&nbsp;<strong><span
-style='font-family:"Verdana",sans-serif'>[Auto Connect]</span></strong>&nbsp;and
-make certain you see it connect to your Shoutcast server.</span></p>
+background:white'><span style='font-family:"Verdana",sans-serif;color:black'>Click&nbsp;<strong>[Auto
+Connect]</strong>&nbsp;and make certain you see it connect to your Shoutcast
+server.</span></p>
 
 <p style='margin-top:12.0pt;margin-right:0in;margin-bottom:6.0pt;margin-left:
 .5in;background:white'><span style='font-family:"Verdana",sans-serif;
@@ -358,11 +373,9 @@ color:black'><img border=0 width=380 height=648 src="Icecast_files/image006.png"
 <p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
 color:black;background:white'>&nbsp;</span></p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
-margin-left:.5in;margin-right:0in'>
+<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2 style='background:#DEEAF6'><span style='color:black;background:white'>Shoutcast
-Control Panel</span></h2>
+<h2><span style='color:black'>Shoutcast Control Panel</span></h2>
 
 </div>
 
@@ -393,8 +406,8 @@ when there is no stream playing.</span><br>
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span class=Heading2Char><span style='color:
-black;text-transform:none'>Setting up the in-world radio</span></span></h2>
+<h2><span class=Heading2Char><span style='color:black;text-transform:none'>Setting
+up the in-world radio</span></span></h2>
 
 </div>
 
@@ -420,7 +433,7 @@ href="http://wiki.phoenixviewer.com/land_audio_tab"><span style='font-family:
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>MIXXX</span></h2>
+<h2><span style='color:black'>MIXXX</span></h2>
 
 </div>
 
@@ -444,11 +457,11 @@ instructions for MP3 files:</span></u></b></p>
 streaming on Windows, you must follow these instructions:</span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
-.5in'><span style='font-family:"Verdana",sans-serif;color:black'>First, download
-the lame library from&nbsp;http://www.rarewares.org. The download page includes
-32-bit and 64-bit versions. Make sure the version you download matches the
-version of Mixxx that you use, not the version of Windows. If you are on 64-bit
-Windows but are using 32bit Mixxx, you need the 32bit (</span><span
+.5in'><span style='font-family:"Verdana",sans-serif;color:black'>First,
+download the lame library from&nbsp;http://www.rarewares.org. The download page
+includes 32-bit and 64-bit versions. Make sure the version you download matches
+the version of Mixxx that you use, not the version of Windows. If you are on
+64-bit Windows but are using 32bit Mixxx, you need the 32bit (</span><span
 style='color:black'>“</span><span style='font-family:"Verdana",sans-serif;
 color:black'>x86</span><span style='color:black'>”</span><span
 style='font-family:"Verdana",sans-serif;color:black'>) version of the library.
@@ -462,7 +475,7 @@ Files\Mixxx\.</span></p>
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Running Mixxx</span></h2>
+<h2><span style='color:black'>Running Mixxx</span></h2>
 
 </div>
 
@@ -479,40 +492,37 @@ width=567 height=453 src="Icecast_files/image012.jpg"></span></p>
 .5in;text-indent:-.25in'><strong><span style='font-family:Symbol;color:black;
 font-weight:normal'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></strong><span style='font-family:"Verdana",sans-serif;
-color:black'>Check&nbsp;<strong><span style='font-family:"Verdana",sans-serif'>Turn
-On Live Broadcasting&nbsp;</span></strong></span></p>
+color:black'>Check&nbsp;<strong>Turn On Live Broadcasting&nbsp;</strong></span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in;text-indent:-.25in'><span style='font-family:Symbol;color:black'>·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-family:"Verdana",sans-serif;color:black'>Set
-type to&nbsp;<strong><span style='font-family:"Verdana",sans-serif'>Shoutcast1</span></strong>&nbsp;</span></p>
+type to&nbsp;<strong>Shoutcast1</strong>&nbsp;</span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in;text-indent:-.25in'><strong><span style='font-family:Symbol;color:black;
 font-weight:normal'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></strong><span style='font-family:"Verdana",sans-serif;
-color:black'>The standard mount point everyone uses is&nbsp;<strong><span
-style='font-family:"Verdana",sans-serif'>/stream&nbsp;</span></strong></span></p>
+color:black'>The standard mount point everyone uses is&nbsp;<strong>/stream&nbsp;</strong></span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in;text-indent:-.25in'><strong><span style='font-family:Symbol;color:black;
 font-weight:normal'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></strong><span style='font-family:"Verdana",sans-serif;
-color:black'>Host is&nbsp;<strong><span style='font-family:"Verdana",sans-serif'>127.0.0.1&nbsp;</span></strong></span></p>
+color:black'>Host is&nbsp;<strong>127.0.0.1&nbsp;</strong></span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in;text-indent:-.25in'><span style='font-family:Symbol;color:black'>·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-family:"Verdana",sans-serif;color:black'>Port
-is&nbsp;<strong><span style='font-family:"Verdana",sans-serif'>8080</span></strong>&nbsp;from
-the Dreamworld setup.&nbsp;</span></p>
+is&nbsp;<strong>8080</strong>&nbsp;from the Dreamworld setup.&nbsp;</span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in;text-indent:-.25in'><span style='font-family:Symbol;color:black'>·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-family:"Verdana",sans-serif;color:black'>Login
-is&nbsp;<strong><span style='font-family:"Verdana",sans-serif'>blank</span></strong>&nbsp;</span></p>
+is&nbsp;<strong>blank</strong>&nbsp;</span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in;text-indent:-.25in'><span style='font-family:Symbol;color:black'>·<span
@@ -523,16 +533,14 @@ is the same password in your Dreamworld setup.&nbsp;</span></p>
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in;text-indent:-.25in'><span style='font-family:Symbol;color:black'>·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-family:"Verdana",sans-serif;color:black'>Check&nbsp;<strong><span
-style='font-family:"Verdana",sans-serif'>Public</span></strong>&nbsp;if you
-want your stream to be on the Mixxx website. Give it a name.&nbsp;</span></p>
+</span></span><span style='font-family:"Verdana",sans-serif;color:black'>Check&nbsp;<strong>Public</strong>&nbsp;if
+you want your stream to be on the Mixxx website. Give it a name.&nbsp;</span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in;text-indent:-.25in'><span style='font-family:Symbol;color:black'>·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-family:"Verdana",sans-serif;color:black'>Click&nbsp;<strong><span
-style='font-family:"Verdana",sans-serif'>Okay</span></strong>&nbsp;and the
-screen will gray out and should show no errors.&nbsp;</span></p>
+</span></span><span style='font-family:"Verdana",sans-serif;color:black'>Click&nbsp;<strong>Okay</strong>&nbsp;and
+the screen will gray out and should show no errors.&nbsp;</span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in'><span style='font-family:"Verdana",sans-serif;color:black'>&nbsp;</span></p>
@@ -540,17 +548,16 @@ screen will gray out and should show no errors.&nbsp;</span></p>
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Mixx Setup</span></h2>
+<h2><span style='color:black'>Mixx Setup</span></h2>
 
 </div>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in'><span style='font-family:"Verdana",sans-serif;color:black'>On the top of
-the Mixxx main screen is an&nbsp;<strong><span style='font-family:"Verdana",sans-serif'>Options</span></strong>&nbsp;menu.
-Click&nbsp;<strong><span style='font-family:"Verdana",sans-serif'>Enable Live
-Broadcasting</span></strong>. I have it shown in the photo. Load a track and
-click play. For me, that was hard to find! It is circled in the picture and
-shows a pause button.</span></p>
+the Mixxx main screen is an&nbsp;<strong>Options</strong>&nbsp;menu.
+Click&nbsp;<strong>Enable Live Broadcasting</strong>. I have it shown in the
+photo. Load a track and click play. For me, that was hard to find! It is
+circled in the picture and shows a pause button.</span></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in'><span style='font-family:"Verdana",sans-serif;color:black'>&nbsp;</span></p>
@@ -583,7 +590,7 @@ see the mount point.</span></p>
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Troubleshooting:&nbsp;</span></h2>
+<h2><span style='color:black'>Troubleshooting:&nbsp;</span></h2>
 
 </div>
 
@@ -601,7 +608,7 @@ server.</span></p>
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Port Forwards:</span></h2>
+<h2><span style='color:black'>Port Forwards:</span></h2>
 
 </div>
 
