--- a/OutworldzFiles/Help/Firewall.htm
+++ b/OutworldzFiles/Help/Firewall.htm
@@ -36,6 +36,8 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#4472C4;
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
+strong
+	{font-family:"Times New Roman",serif;}
 p
 	{margin-right:0in;
 	margin-left:0in;
@@ -76,9 +78,19 @@ div.WordSection1
 
 <p style='margin-top:12.0pt;margin-right:0in;margin-bottom:6.0pt;margin-left:
 .5in;background:white;vertical-align:baseline'><span style='font-family:"Verdana",sans-serif;
+color:black'>DreamGrid Automatically adds rules to the Windows firewall for Robust,
+Opensim, Icecast, and Apache.  There is no need to adjust these rules.</span></p>
+
+<p style='margin-top:12.0pt;margin-right:0in;margin-bottom:6.0pt;margin-left:
+.5in;background:white;vertical-align:baseline'><span style='font-family:"Verdana",sans-serif;
+color:black'>If you accidently denied the firewall rule request, you will have
+to locate the NO symbol in the firewall and delete it.</span></p>
+
+<p style='margin-top:12.0pt;margin-right:0in;margin-bottom:6.0pt;margin-left:
+.5in;background:white;vertical-align:baseline'><span style='font-family:"Verdana",sans-serif;
 color:black'>You may want to block certain IP addresses from accessing your
-system. This manual shows how. The Banlist Manual shows how to do it with
-DreamGrid.</span></p>
+system. This manual shows how. <b>The Banlist Manual shows how to do it with
+DreamGrid.</b></span></p>
 
 <p style='margin-top:12.0pt;margin-right:0in;margin-bottom:6.0pt;margin-left:
 .5in;background:white;vertical-align:baseline'><span style='font-family:"Verdana",sans-serif;
@@ -177,8 +189,10 @@ color:black'>&nbsp;</span></p>
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:.5in;
 background:white;vertical-align:baseline'><span style='font-family:"Verdana",sans-serif;
-color:black'>Select&nbsp;<strong>Which Remote IP does this rule belong to</strong>&nbsp;and
-click&nbsp;<strong>These IP addresses&nbsp;</strong>and click&nbsp;<strong>Add</strong></span></p>
+color:black'>Select&nbsp;<strong><span style='font-family:"Verdana",sans-serif'>Which
+Remote IP does this rule belong to</span></strong>&nbsp;and click&nbsp;<strong><span
+style='font-family:"Verdana",sans-serif'>These IP addresses&nbsp;</span></strong>and
+click&nbsp;<strong><span style='font-family:"Verdana",sans-serif'>Add</span></strong></span></p>
 
 <p style='margin-top:12.0pt;margin-right:0in;margin-bottom:6.0pt;margin-left:
 .5in;background:white;vertical-align:baseline'><span style='font-family:"Verdana",sans-serif;
@@ -251,7 +265,7 @@ color:black'>Enter a descriptive name.</span></p>
 
 <p style='margin-top:12.0pt;margin-right:0in;margin-bottom:6.0pt;margin-left:
 .5in;background:white;vertical-align:baseline'><span style='font-family:"Verdana",sans-serif;
-color:black'><img border=0 width=574 height=454 id="Picture 1"
+color:black'><img border=0 width=574 height=448 id="Picture 1"
 src="Firewall_files/image012.jpg" alt="Specify Name"></span></p>
 
 <p style='margin-top:12.0pt;margin-right:0in;margin-bottom:6.0pt;margin-left:
