--- a/OutworldzFiles/Help/Flotsam Cache.htm
+++ b/OutworldzFiles/Help/Flotsam Cache.htm
@@ -24,18 +24,19 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
-h2
-	{mso-style-link:"Heading 2 Char";
+h1
+	{mso-style-link:"Heading 1 Char";
 	margin-top:5.0pt;
 	margin-right:0in;
 	margin-bottom:0in;
 	margin-left:0in;
 	line-height:115%;
-	background:#D9E2F3;
+	background:#4472C4;
 	border:none;
 	padding:0in;
-	font-size:10.0pt;
+	font-size:11.0pt;
 	font-family:"Calibri",sans-serif;
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	font-weight:normal;}
@@ -48,12 +49,14 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#4472C4;
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
-span.Heading2Char
-	{mso-style-name:"Heading 2 Char";
-	mso-style-link:"Heading 2";
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	font-family:"Times New Roman",serif;
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
-	background:#D9E2F3;}
+	background:#4472C4;}
 span.TitleChar
 	{mso-style-name:"Title Char";
 	mso-style-link:Title;
@@ -92,18 +95,16 @@ lang=EN>Flotsam Cache Settings</span></p>
 10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
 background:white'><br>
 OpenSimulator has an asset cache that stores the assets retrieved from an asset
-service. This reduces the load on a possibly remote asset service and improves
-OpenSimulator responsiveness.  </span></p>
+service. This reduces the load on a asset service and improves OpenSimulator
+responsiveness.  </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'><img
 width=576 height=275 id="Picture 1" src="Flotsam%20Cache_files/image001.png"></span></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
-margin-left:.5in;margin-right:0in'>
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h2 style='background:#D9E2F3'><span style='color:black;background:white'>Flotsam
-asset cache</span></h2>
+<h1 style='background:#4472C4'>Flotsam asset cache</h1>
 
 </div>
 
@@ -120,33 +121,31 @@ cached assets from the filesystem), by console commands (e.g. &quot;fcache
 clear&quot;) or by timeout settings (e.g. FileCacheTimeout = 1 to automatically
 remove cache files not accessed for 1 hours). </span></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
-margin-left:.5in;margin-right:0in'>
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h2 style='background:#D9E2F3'><span style='color:black;background:white'>General
-principles</span></h2>
+<h1 style='background:#4472C4'>General principles</h1>
 
 </div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
-background:white'>When OpenSimulator requires an asset (e.g. in response to a
+background:white'>When OpenSimulator requires an asset (e.g., in response to a
 viewer request for a notecard), then it first asks the cache for this data. If
-the data is not found in the cache, then it asks the grid asset service (or
-possibly a foreign asset service in the case of Hypergrid). If the asset is
-found then it is both stored in the cache and returned to the user.</span></p>
+the data is not found in the cache, then it asks the grid asset service (or a
+foreign asset service in the case of Hypergrid). If the asset is there, then it
+is both stored in the cache and returned to the user.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
-background:white'>If an asset is uploaded to OpenSimulator (e.g. by the viewer
-uploading an animation), then the asset is immediately both kept in cache (if
-there is room and the asset is not temporary) and sent to the asset service (if
-the asset is not temporary).</span></p>
+background:white'>If an asset is uploaded to OpenSimulator (e.g., by the viewer
+uploading an animation), then the asset is at once both kept in cache (if there
+is room and the asset is not temporary) and sent to the asset service (if the
+asset is not temporary).</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
 background:white'>Therefore, at any point you can wipe any temporary data
-stored by the asset cache (e.g. on the filesystem), since the next request for
+stored by the asset cache (e.g., on the filesystem), since the next request for
 that asset will simply query the asset service as the asset will not be found
 in cache.</span></p>
 
