--- a/OutworldzFiles/Help/Joomla Update.htm
+++ b/OutworldzFiles/Help/Joomla Update.htm
@@ -27,18 +27,19 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
-h2
-	{mso-style-link:"Heading 2 Char";
+h1
+	{mso-style-link:"Heading 1 Char";
 	margin-top:5.0pt;
 	margin-right:0in;
 	margin-bottom:0in;
 	margin-left:0in;
 	line-height:115%;
-	background:#D9E2F3;
+	background:#4472C4;
 	border:none;
 	padding:0in;
-	font-size:10.0pt;
+	font-size:11.0pt;
 	font-family:"Calibri",sans-serif;
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	font-weight:normal;}
@@ -51,13 +52,14 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#4472C4;
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
-span.Heading2Char
-	{mso-style-name:"Heading 2 Char";
-	mso-style-link:"Heading 2";
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
 	font-family:"Times New Roman",serif;
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
-	background:#D9E2F3;}
+	background:#4472C4;}
 span.TitleChar
 	{mso-style-name:"Title Char";
 	mso-style-link:Title;
@@ -102,10 +104,9 @@ line-height:115%;font-family:"Segoe UI",sans-serif;color:#333333'>  <span
 style='background:white'>If you also have jOpenSim PayPal in use, you will need
 to update this component as well.</span></span></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
-margin-left:.5in;margin-right:0in'>
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h2><span style='color:black'>How to Update:</span></h2>
+<h1>How to Update:</h1>
 
 </div>
 
