--- a/OutworldzFiles/Help/License.htm
+++ b/OutworldzFiles/Help/License.htm
@@ -136,7 +136,20 @@ free, copyleft license for software and other kinds of works, specifically
 designed to ensure cooperation with the community in the case of network server
 software. All rights are irrevocable provided the stated conditions are met.
 This License explicitly affirms your unlimited permission to run the unmodified
-Program.  https://www.gnu.org/licenses/agpl-3.0.txt</span></p>
+Program.  <a href="https://www.gnu.org/licenses/agpl-3.0.txt"><span
+style='color:black'><span style='color:black'>https://www.gnu.org/licenses/agpl-3.0.txt</span></span></a></span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
+color:black'>AGPL requires anyone who recodes or improves the DreamGrid
+application to make their changes Public.  This prohibits ANY proprietary changes
+to the DreamGrid code, including those hidden behind firewalls.  All changes to
+it must be public, and must pass along the AGPL 3.0 license.  If you do not
+like this license, please do not use my DreamGrid code.    </span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
+color:black'>Opensim and other modules have their own specific licenses.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
@@ -169,7 +182,7 @@ Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbs
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Data Collection Policy</span></h2>
+<h2><span style='color:black'>Data Collection Policy</span></h2>
 
 </div>
 
@@ -182,25 +195,21 @@ other details are sent to Outworldz.</span></p>
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Publicity:</span></h2>
+<h2><span style='color:black'>Publicity:</span></h2>
 
 </div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
-color:black'><img border=0 width=247 height=220 src="License_files/image001.png"></span></p>
-
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
 color:black'>If you check the <b>Publish Grid</b> button, the system will send
 public information about your grid, such as the web address, to Outworldz, LLC
-for use in the Hyperica.com directory.  This information is removed
-automatically if you turn your grid off or uncheck the box.</span></p>
+for use in the Hyperica.com directory.  This information not shown if you turn
+your grid off or uncheck the box.</span></p>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>DNS</span></h2>
+<h2><span style='color:black'>DNS</span></h2>
 
 </div>
 
@@ -209,22 +218,18 @@ margin-left:.5in;margin-right:0in'>
 color:black'>The DYN DNS system stores public IP addresses and your domain name
 as is necessary to run the DNS system.</span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
-color:black'>&nbsp;</span></p>
-
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Anonymous data</span></h2>
+<h2><span style='color:black'>Anonymous data</span></h2>
 
 </div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
-color:black'>The unique random identifier of your machine is stored at Outworldz
-along with a small amount of anonymous data. This includes whether your
-software passes diagnostics, the revision level, and whether it is on the Hypergrid. 
+color:black'>The unique random identifier of your machine is stored at
+Outworldz along with a small amount of anonymous data. This includes whether
+your software passes diagnostics, the revision level, and whether it is on the Hypergrid. 
 This is used for quality control purposes.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
